--- a/Review/coffeeShop.html
+++ b/Review/coffeeShop.html
@@ -12,6 +12,105 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
   </head>
-  <body></body>
+  <body>
+    <!--로그인 모달창 시작-->
+    <div class="login-background" id="login-bg">
+      <div class="login-item">
+        <p>로그인</p>
+        <form>
+          <div class="form-group">
+            <input
+              type="email"
+              class="form-control"
+              placeholder="이메일을 입력하세요"
+              id="email"
+            />
+            <p id="email-alert">이메일을 입력하지 않았습니다.</p>
+          </div>
+          <div class="form-group">
+            <input
+              type="passwrod"
+              class="form-control"
+              placeholder="비밀번호를 입력하세요"
+              id="password"
+            />
+            <p id="password-alert">비밀번호를 입력하지 않았습니다.</p>
+          </div>
+          <div class="form-btn">
+            <button class="login-btn">Login</button>
+            <button class="home-btn">Home</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!--로그인 모달창 끝-->
+
+    <div class="navbar">
+      <span class="navbar-brand mb-0 h1" id="logo">MyCoffeShop</span>
+      <a id="nav-menu">Products</a>
+    </div>
+
+    <ul class="menu-list">
+      <li class="menu-list-item">원두</li>
+      <li class="menu-list-item">커피용품</li>
+      <li class="menu-list-item">기타음료</li>
+    </ul>
+
+    <div class="main-background">
+      <div class="main-title">
+        <h1>MyCoffeShop</h1>
+        <p>A place to truly relax and enjoy coffee</p>
+      </div>
+    </div>
+
+    <div class="content-background">
+      <div class="content-item">
+        <p class="content-item-title">
+          <button class="btn-login" id="login">Login</button>
+        </p>
+      </div>
+      <div class="content-item"><p class="content-item-title">Search</p></div>
+      <div class="content-item"><p class="content-item-title">New Item</p></div>
+      <div class="content-item"><p class="content-item-title">Other</p></div>
+    </div>
+  </body>
+
+  <script>
+    //1. product 메뉴를 누르면 menu-list 보이기
+    $("#nav-menu").click(function () {
+      $(".menu-list").slideToggle();
+    });
+
+    //로그인 버튼을 누르면 모달창 보이기
+    $("#login").click(function () {
+      $(".login-background").show();
+    });
+
+    //폼 전송 시
+    //모달창에서 Login 누르면 이메일이 없을 경우 이메일 없다고 나옴
+
+    //모달창에서 Login 누르면 비밀번호가 없을 경우 비밀번호 없다고 나옴
+    $("form").on("submit", function (e) {
+      if ($("#email").val() == "") {
+        e.preventDefault();
+        $("#email-alert").show();
+      }
+      if ($("#password").val() == "") {
+        e.preventDefault();
+        $("#password-alert").show();
+      }
+    });
+
+    //모달 열 경우 홈 버튼 누르면 모달창 닫기
+    $(".home-btn").click(function () {
+      $(".login-background").hide();
+    });
+  </script>
 </html>
