이미지 슬라이드 다시 복습

--- a/Review/coffeeShop.html
+++ b/Review/coffeeShop.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <!--로그인 모달창 시작-->
+    <div style="overflow: hidden;">
     <div class="login-background" id="login-bg">
       <div class="login-item">
         <p>로그인</p>
@@ -50,6 +51,7 @@
         </form>
       </div>
     </div>
+  </div>
     <!--로그인 모달창 끝-->
 
     <div class="navbar">
