모달창, 탭기능 수정 (이벤트 사용, data-id 이용)

--- a/Review/coffeeShop.html
+++ b/Review/coffeeShop.html
@@ -113,10 +113,10 @@
 <!--탭 슬라이드 시작-->
 <div class="container mt-5">
   <ul class="tab-list">
-    <li class="tab-btn">Products</li>
-    <li class="tab-btn show-tab">Information</li>
-    <li class="tab-btn">Shipping</li>
-    <li class="tab-btn">Others</li>
+    <li class="tab-btn" data-id="0">Products</li>
+    <li class="tab-btn show-tab" data-id="1">Information</li>
+    <li class="tab-btn" data-id="2">Shipping</li>
+    <li class="tab-btn" data-id="3">Others</li>
   </ul>
 
   <div class="tab-content">
