--- a/coding_apple/Level2/2-13.html
+++ b/coding_apple/Level2/2-13.html
@@ -274,8 +274,8 @@
       });
 
       //jquery
-      $(".list").data("작명", "값");
-      $(".list").data("작명");
+      //   $(".list").data("작명", "값");
+      //   $(".list").data("작명");
 
       function 탭열기(숫자) {
         //i는 정의가 필요
