form 태그 추가(input 내용 따라 값 변경)

--- a/Review/coffeeShop.html
+++ b/Review/coffeeShop.html
@@ -166,6 +166,37 @@
   </div>
 </div>
 <!--탭 슬라이드 끝-->
+<!-- form 태그 시작-->
+<form class="container my-5">
+  <div class="form-group">
+    <p>상품선택</p>
+    <select class="form-control" id="checkList1">
+      <option>커피</option>
+      <option>스파클링</option>
+      <option>쉐이크</option>
+      <option>티(tea)</option>
+    </select>
+
+    <div class="c-select">
+      <p class="mt-4">온도 선택</p>
+      <select class="form-control" id="checkList2">
+        <option>뜨거움</option>
+      <option>차가움</option>
+      </select>
+    </div>
+
+    <div class="menu-select">
+      <p class="mt-4">메뉴 선택</p>
+      <select class="form-control" id="checkList3">
+        <option>아메리카노</option>
+      <option>라떼</option>
+      <option>아인슈페너</option>
+      </select>
+    </div>
+  </div>
+</form>
+<!-- form 태그 끝-->
+
 </body>
 <script src="coffeeShop.js"></script>
 </html>
