코딩애플 js for문 연습하기

--- a/coding_apple/Level3/3-4.html
+++ b/coding_apple/Level3/3-4.html
@@ -53,11 +53,33 @@
     });
     /*
         $("#option2").html("");
-        
+
         for (var i = 0; i < 6; i++) {
           var 템플릿 = `<option>${사이즈[i]}</option>`;
           $("#option2").append(템플릿);
         }
         */
+
+    //구구단 만들기
+    //2단부터 시작
+    // for (var i = 2; i < 10; i++) {
+    //   // console.log(2 * i);
+    //   for (var t = 1; t < 10; t++) {
+    //     console.log(i * t);
+    //   }
+    // }
+    var 판매실적어레이 = [10, 20, 30, 40, 50];
+    var 평균월별판매량 = 35;
+
+    //하반기 실적
+    function 목표량계산기(판매실적어레이, 평균월별판매량) {
+      //7~11월 실적(실적5개월), 평균 월 목표 판매량 입력 => 12월 목표 실적
+      var 실적5개월 = 0;
+      for (var i = 0; i < 5; i++) {
+        실적5개월 = 실적5개월 + 판매실적어레이[i]; //총 6개월
+      }
+      var 실적12월 = 평균월별판매량 * 6 - 실적5개월;
+      console.log(실적12월);
+    }
   </script>
 </html>
