--- a/Review/coffeeShop.html
+++ b/Review/coffeeShop.html
@@ -7,17 +7,18 @@
     <title>Document</title>
     <link href="style.css" rel="stylesheet" />
 
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"
+  ></script>
   </head>
   <body>
     <!--로그인 모달창 시작-->
@@ -197,6 +198,58 @@
 </form>
 <!-- form 태그 끝-->
 
+<!--sort, filter 사용-->
+<div class="card-group container">
+  <div class="card">
+    <img src="https://via.placeholder.com/400" />
+    <div class="card-body">
+      <h5 class="ItemName">Brazil dark coffee</h5>
+      <p>가격 : <span class="ItemPrice">15000</span></p>
+      <button class="btn btn-secondary">주문하기</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://via.placeholder.com/400" />
+    <div class="card-body">
+      <h5 class="ItemName">Ethiopia medium coffee</h5>
+      <p>가격 : <span class="ItemPrice">30000</span></p>
+      <button class="btn btn-secondary">주문하기</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://via.placeholder.com/400" />
+    <div class="card-body">
+      <h5 class="ItemName">Columbia non-caffeine coffee</h5>
+      <p>가격 : <span class="ItemPrice">25000</span></p>
+      <button class="btn btn-secondary">주문하기</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://via.placeholder.com/400" />
+    <div class="card-body">
+      <h5 class="ItemName">Vietnam non-caffeine coffee</h5>
+      <p>가격 : <span class="ItemPrice">20000</span></p>
+      <button class="btn btn-secondary">주문하기</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://via.placeholder.com/400" />
+    <div class="card-body">
+      <h5 class="ItemName">Indonesia dark coffee</h5>
+      <p>가격 : <span class="ItemPrice">15000</span></p>
+      <button class="btn btn-secondary">주문하기</button>
+    </div>
+  </div>
+</div>
+
+ <!--상품정렬-->
+ <div class="container my-4">
+  <button class="btn btn-primary" id="sortEng">가나다순정렬</button>
+  <button class="btn btn-danger" id="sortPrice">가격순정렬</button>
+  <!--6만원 이하만 보기-->
+  <button class="btn btn-success" id="filterPrice">6만원이하</button>
+  <button class="btn btn-warning" id="currentSort">되돌리기</button>
+</div>
 </body>
 <script src="coffeeShop.js"></script>
 </html>
