--- a/Review/coffeeShop.html
+++ b/Review/coffeeShop.html
@@ -203,40 +203,40 @@
   <div class="card">
     <img src="https://via.placeholder.com/400" />
     <div class="card-body">
-      <h5 class="ItemName">Brazil dark coffee</h5>
-      <p>가격 : <span class="ItemPrice">15000</span></p>
+      <h5 class="ItemName" id="card-ItemName0">Test1</h5>
+      <p>가격 : <span class="ItemPrice" id="card-ItemPrice0">1000</span></p>
       <button class="btn btn-secondary">주문하기</button>
     </div>
   </div>
   <div class="card">
     <img src="https://via.placeholder.com/400" />
     <div class="card-body">
-      <h5 class="ItemName">Ethiopia medium coffee</h5>
-      <p>가격 : <span class="ItemPrice">30000</span></p>
+      <h5 class="ItemName" id="card-ItemName1">Test2</h5>
+      <p>가격 : <span class="ItemPrice" id="card-ItemPrice1">2000</span></p>
       <button class="btn btn-secondary">주문하기</button>
     </div>
   </div>
   <div class="card">
     <img src="https://via.placeholder.com/400" />
     <div class="card-body">
-      <h5 class="ItemName">Columbia non-caffeine coffee</h5>
-      <p>가격 : <span class="ItemPrice">25000</span></p>
+      <h5 class="ItemName" id="card-ItemName2">Test3</h5>
+      <p>가격 : <span class="ItemPrice" id="card-ItemPrice2">3000</span></p>
       <button class="btn btn-secondary">주문하기</button>
     </div>
   </div>
   <div class="card">
     <img src="https://via.placeholder.com/400" />
     <div class="card-body">
-      <h5 class="ItemName">Vietnam non-caffeine coffee</h5>
-      <p>가격 : <span class="ItemPrice">20000</span></p>
+      <h5 class="ItemName" id="card-ItemName3">Test4</h5>
+      <p>가격 : <span class="ItemPrice" id="card-ItemPrice3">4000</span></p>
       <button class="btn btn-secondary">주문하기</button>
     </div>
   </div>
   <div class="card">
     <img src="https://via.placeholder.com/400" />
     <div class="card-body">
-      <h5 class="ItemName">Indonesia dark coffee</h5>
-      <p>가격 : <span class="ItemPrice">15000</span></p>
+      <h5 class="ItemName" id="card-ItemName4">Test5</h5>
+      <p>가격 : <span class="ItemPrice" id="card-ItemPrice4">5000</span></p>
       <button class="btn btn-secondary">주문하기</button>
     </div>
   </div>
@@ -247,9 +247,101 @@
   <button class="btn btn-primary" id="sortEng">가나다순정렬</button>
   <button class="btn btn-danger" id="sortPrice">가격순정렬</button>
   <!--6만원 이하만 보기-->
-  <button class="btn btn-success" id="filterPrice">6만원이하</button>
-  <button class="btn btn-warning" id="currentSort">되돌리기</button>
+  <button class="btn btn-success" id="filterPrice">2만원이하</button>
+  <button class="btn btn-warning" id="sortCurrent">되돌리기</button>
 </div>
+
+<!--6만원 이하 결과-->
+<div class="card-group container">
+  <div class="card2">
+    </div>
+</div>
+<script>
+   //sort, filter
+   var coffeeItems = [
+    { id: 0, ItemPrice: 15000, ItemName: "Brazil dark coffee" },
+    { id: 1, ItemPrice: 30000, ItemName: "Ethiopia medium coffee" },
+    { id: 2, ItemPrice: 25000, ItemName: "Columbia non-caffeine coffee" },
+    { id: 3, ItemPrice: 20000, ItemName: "Vietnam non-caffeine coffee" },
+    { id: 4, ItemPrice: 18000, ItemName: "Indonesia dark coffee" },
+  ];
+
+  //데이터바인딩(함수로 묶기)
+  function coffeeData() {
+    for (var i = 0; i < 5; i++) {
+      $(".ItemName").eq(i).html(coffeeItems[i].ItemName);
+      $(".ItemPrice").eq(i).html(coffeeItems[i].ItemPrice);
+    }
+  }
+
+  //html 내 <!--sort, filter 사용-->에 js 데이터 넣기
+  // document.getElementById("card-ItemName1").innerHTML= coffeeItems[0].ItemName;
+
+  for(var i=0; i<5; i++) {
+    document.getElementById("card-ItemName"+i).innerHTML= coffeeItems[i].ItemName;
+    document.getElementById("card-ItemPrice"+i).innerHTML= coffeeItems[i].ItemPrice;
+  }
+
+  //sort를 이용해 가격 정렬
+  $("#sortPrice").click(function () {
+    coffeeItems.sort(function (a, b) {
+      return a.ItemPrice - b.ItemPrice;
+    });
+    //sort를 통해 데이터 정렬 후 데이터바인딩
+    coffeeData();
+  });
+
+  // //sort로 가나다순 정렬
+  $("#sortEng").click(function () {
+    coffeeItems.sort(function (a, b) {
+      if (a.ItemName < b.ItemName == true) {
+        //글자 비교(부등호), +를 return 하면 b를 왼쪽, -는 b를 오른쪽
+        return -1;
+      } else {
+        return 1;
+      }
+    });
+    //sort를 통해 데이터 정렬 후 데이터바인딩
+    coffeeData();
+  });
+
+  //filter를 이용해 2만원 이하만 남기기
+  
+  $("#filterPrice").click(function() {
+    var newCoffeeItems = coffeeItems.filter(function(a) {
+      return a.ItemPrice <= 20000;
+    })
+
+   console.log(newCoffeeItems);
+
+   newCoffeeItems.forEach(function(a) {
+     var cardTemplate = 
+     `<div class="card">
+     <img src="https://via.placeholder.com/400" />
+        <div class="card-body">
+          <h5 class="title">${a.ItemName}</h5>
+          <p>가격 : <span class="price">${a.ItemPrice}</span></p>
+          <button class="btn btn-danger">주문하기</button>
+        </div>
+      </div>`;
+      $(".card2").append(cardTemplate);
+   })
+  })
+
+  //2번 클릭 시 filter 사라지기
+  $("#filterPrice").dblclick(function() {
+    $(".card2").remove();
+  })
+
+  //원래대로 되돌리기 id값 이용
+  $("#sortCurrent").click(function () {
+      coffeeItems.sort(function (a, b) {
+          return a.id - b.id;
+        });
+        //sort를 통해 데이터 정렬 후 데이터바인딩
+        coffeeData();
+      });
+</script>
 </body>
 <script src="coffeeShop.js"></script>
 </html>
