--- a/coding_apple/Level3/3-7,8.html
+++ b/coding_apple/Level3/3-7,8.html
@@ -60,6 +60,8 @@
       <button class="btn btn-success" id="filterPrice">6만원이하</button>
       <button class="btn btn-warning" id="currentSort">되돌리기</button>
     </div>
+
+    <div class="card-group2 container"></div>
     <script>
       var products = [
         //array 안에 object가 3개 들어감
@@ -131,9 +133,10 @@
           return a.price <= 60000;
         });
 
+        console.log(새상품);
+
         새상품.forEach(function (a) {
-          var template = `
-            <div class="card">
+          var template = `<div class="card">
         <img src="https://via.placeholder.com/600" />
         <div class="card-body">
           <h5 class="title">${a.title}</h5>
