메인 이미지, 회원가입 창 수정(fadeIn 사용)

--- a/Review/coffeeShop.html
+++ b/Review/coffeeShop.html
@@ -157,13 +157,35 @@
       <button id="left-bar-close">닫기</button>
     </div>
 
+    <!--메인 이미지 시작-->
     <div class="main-background">
       <div class="main-title">
-        <h1>MyCoffeeShop</h1>
-        <p>A place to truly relax and enjoy coffee</p>
+        <h1 class="main-title-h1" style="display: none;">MyCoffeeShop</h1>
+        <p class="main-title-p" style="display: none;">A place to truly relax and enjoy coffee</p>
         <button id="left-bar-button">왼쪽에서 메뉴 보기</button>
       </div>
+      <div class="main-img" style="position: relative;">
+        <img src="img/main-coffee1.png" class="main-img-num1">
+        <img src="img/main-coffee2.png" class="main-img-num2">
+        <img src="img/main-coffee3.png" class="main-img-num3">
+      </div>
     </div>
+    
+    <!--메인 이미지 끝-->
+
+    <!--회원가입 창 시작-->
+    <div>
+    <div class="membership">
+      <div class="membership-title">
+        <h1 class="membership-title-h1">MyCoffeeShop의 특별한 혜택, 회원가입!</h1>
+        <p class="membership-title-p">MyCoffeeShop 회원이세요? 로그인을 통해 혜택을 즐기세요.</p>
+        <p class="membership-title-p">MyCoffeeShop 회원이 아니세요? 가입을 통해 혜택을 누리세요.</p>
+        <button class="membership-signIn">회원가입</button>
+        <button class="membership-LogIn">로그인</button>
+      </div>
+    </div>
+  </div>
+    <!--회원가입 창 끝-->
 
     <div class="content-background">
       <div class="content-item">
